--- a/Index.html
+++ b/Index.html
@@ -174,8 +174,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row text-center">
-        <div class="col-2">
+      <div class="row">
+        <div class="col">
           <h5>Shop</h5>
           <p>Ratio Six</p>
           <p>Ratio Eight</p>
@@ -184,7 +184,7 @@
           <p>Accessories</p>
           <p>Shop All</p>
         </div>
-        <div class="col-2">
+        <div class="col">
           <h5>Learn</h5>
           <p>Ratio Eight versus Ratio Six</p>
           <p>How To Brew With Ratio Eight</p>
@@ -192,7 +192,7 @@
           <p>Sustainability isn't just a Buzzword</p>
           <p>Adjusting your grind</p>
         </div>
-        <div class="col-2">
+        <div class="col">
           <h5>Support</h5>
           <p>Contact Us</p>
           <p>Warranty</p>
@@ -203,7 +203,7 @@
           <p>Accessibility</p>
           <p>Shipping Policy</p>
         </div>
-        <div class="col-2">
+        <div class="col">
           <h5>Inside Ratio</h5>
           <p>About us</p>
           <p>Ratio Rewards</p>
@@ -211,7 +211,7 @@
           <p>Wholesale Info</p>
           <p>Ratio Retailers</p>
         </div>
-        <div class="col-2">
+        <div class="col">
           <h5>Great Coffee Everywhere</h5>
           <p>office</p>
           <p>Hotel</p>
@@ -229,7 +229,7 @@
           <p class="font-weight-bold">
             Get the inside scoop on coffee culture & brewing tips.
           </p>
-          <input type="email" placeholder="Enter Email Address" />
+          <input class="form-control" type="email" placeholder="Enter Email Address" />
         </div>
         <div class="col-4">
           <p class="font-weight-bold">See the latest and follow us.</p>
@@ -240,5 +240,6 @@
         </div>
       </div>
     </div>
+  <br/><br/><br/><br/><br/>
   </body>
 </html>
